--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ footer_text: >
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
 
-lang: en, ja # the language of your site (for example: en, fr, cn, ru, etc.)
+lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: dna_green.jpg  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://Hattyoriiiiiii.github.io # the base hostname & protocol for your site
@@ -220,8 +220,8 @@ display_tags: ['ngs', 'single-cell', 'biology', '3dprinter', 'raspberrypi', 'vr'
 
 scholar:
 
-  last_name: Einstein
-  first_name: [Albert, A.]
+  last_name: Tatsuya
+  first_name: Hattori
 
   style: apa
   locale: en
