--- a/_config.yml
+++ b/_config.yml
@@ -133,6 +133,9 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  tutorials:
+     output: true
+     permalink: /tutorials/:path/
 
 news_scrollable: true # adds a vertical scroll bar if there are more than 3 news items
 news_limit: 10 # leave blank to include all the news in the `_news` folder
@@ -212,7 +215,7 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
-display_tags: ['ngs', 'single-cell', 'biology', '3dprinter', 'raspberrypi', 'vr'] # this tags will be dispalyed on the front page of your blog
+display_tags: ['ngs', 'single-cell', 'biology', '3dprinter', 'raspberrypi', 'vr', 'tips'] # this tags will be dispalyed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
