--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@ middle_name:
 last_name: Hattori
 email: 6422539@ed.tus.ac.jp
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  This is Tatsuya Hattori's personal website.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
+keywords: bioinformatics, ngs, epigenetics, spermatogenesis, gametogenesis, rna-seq, atac-seq, chip-seq, scrna-seq, scatac-seq, cut&tag, linux, python, r  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: dna_green.jpg  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
@@ -287,7 +287,7 @@ jekyll-diagrams:
 
 enable_google_analytics:    true  # enables google analytics
 enable_panelbear_analytics: false  # enables panelbear analytics
-enable_google_verification: false  # enables google site verification
+enable_google_verification: true  # enables google site verification
 enable_bing_verification:   false  # enables bing site verification
 enable_masonry:             true   # enables automatic project cards arangement
 enable_math:                true   # enables math typesetting (uses MathJax)
